<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="button_next">NEXT</string>
    <string name="button_prev">PREVIOUS</string>
    <string name="toast_correct">Correct!</string>
    <string name="toast_incorrect">Incorrect!</string>
    <string name="button_complete">Complete</string>
    <string name="button_reset">Reset</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="button_show_answer">Show Answer</string>
    <string name="button_cheat">Cheat!</string>
    <string name="toast_judgment">Cheating is wrong.</string>
    <string name="label_cheats_left">%d left</string>
</resources>